--- a/index.html
+++ b/index.html
@@ -2,128 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Jayanth P | Backend & ML Developer</title>
+    <title>Jayanth P | Backend & ML Engineer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Inter', sans-serif;
-        }
-
-        body {
-            background-color: #0d1117;
-            color: #e6edf3;
-            line-height: 1.6;
-        }
-
-        header {
-            padding: 100px 20px;
-            text-align: center;
-        }
-
-        header h1 {
-            font-size: 48px;
-            font-weight: 700;
-        }
-
-        header p {
-            margin-top: 15px;
-            font-size: 20px;
-            color: #8b949e;
-        }
-
-        .btn {
-            display: inline-block;
-            margin-top: 30px;
-            padding: 12px 24px;
-            background: #238636;
-            color: white;
-            text-decoration: none;
-            border-radius: 6px;
-            font-weight: 600;
-        }
-
-        section {
-            padding: 60px 20px;
-            max-width: 1000px;
-            margin: auto;
-        }
-
-        h2 {
-            font-size: 32px;
-            margin-bottom: 30px;
-            border-bottom: 2px solid #30363d;
-            padding-bottom: 10px;
-        }
-
-        .projects {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 20px;
-        }
-
-        .card {
-            background: #161b22;
-            padding: 20px;
-            border-radius: 8px;
-            transition: 0.3s;
-        }
-
-        .card:hover {
-            transform: translateY(-5px);
-        }
-
-        .card h3 {
-            margin-bottom: 10px;
-        }
-
-        .card p {
-            color: #8b949e;
-            font-size: 14px;
-        }
-
-        .skills {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-
-        .skill {
-            background: #21262d;
-            padding: 8px 14px;
-            border-radius: 20px;
-            font-size: 14px;
-        }
-
-        footer {
-            text-align: center;
-            padding: 30px;
-            color: #8b949e;
-        }
-
-        a {
-            color: #58a6ff;
-            text-decoration: none;
-        }
-
+        * { margin:0; padding:0; box-sizing:border-box; font-family:'Inter', sans-serif; }
+        body { background:#0d1117; color:#e6edf3; line-height:1.6; }
+        header { padding:100px 20px; text-align:center; }
+        header h1 { font-size:50px; font-weight:700; }
+        header p { margin-top:15px; font-size:20px; color:#8b949e; }
+        .btn { display:inline-block; margin:15px 10px; padding:12px 24px; background:#238636; color:white; text-decoration:none; border-radius:6px; font-weight:600; }
+        section { padding:70px 20px; max-width:1000px; margin:auto; }
+        h2 { font-size:32px; margin-bottom:30px; border-bottom:2px solid #30363d; padding-bottom:10px; }
+        .projects { display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:20px; }
+        .card { background:#161b22; padding:20px; border-radius:8px; transition:0.3s; }
+        .card:hover { transform:translateY(-5px); }
+        .card h3 { margin-bottom:10px; }
+        .card p { color:#8b949e; font-size:14px; }
+        .skills { display:flex; flex-wrap:wrap; gap:10px; }
+        .skill { background:#21262d; padding:8px 14px; border-radius:20px; font-size:14px; }
+        footer { text-align:center; padding:30px; color:#8b949e; }
+        a { color:#58a6ff; text-decoration:none; }
     </style>
 </head>
 <body>
 
 <header>
     <h1>Jayanth P</h1>
-    <p>Backend & Machine Learning Developer</p>
-    <a href="https://github.com/jayanth797" class="btn">View GitHub</a>
+    <p>Backend & Machine Learning Engineer</p>
+    <a href="https://github.com/jayanth797" class="btn">GitHub</a>
+    <a href="jayanthp.pdf" class="btn">Download Resume</a>
 </header>
 
 <section>
     <h2>About</h2>
     <p>
-        Computer Science student focused on building data-driven backend systems and machine learning solutions.
-        Experienced in Python, SQL, and deploying intelligent applications that solve real-world problems.
+        Computer Science undergraduate building full-stack and ML-driven applications.
+        I focus on turning real-world problems into scalable software using Python, Flask, and applied machine learning.
+        Strong interest in clean architecture, deployment workflows, and solving practical business problems.
     </p>
 </section>
 
@@ -133,48 +49,60 @@
 
         <div class="card">
             <h3>Customer Churn Prediction</h3>
-            <p>Built ML model to predict customer churn using Logistic Regression and Random Forest.
-            Focused on recall optimization for business retention strategy.</p>
-            <br>
-            <a href="https://github.com/jayanth797">View Project →</a>
+            <p>Built ML system to predict customer churn using Logistic Regression and Random Forest.
+            Optimized recall (~80%) to prioritize retention-focused business decisions.</p>
         </div>
 
         <div class="card">
-            <h3>Fake News Detection System</h3>
-            <p>Developed NLP-based fake news classifier using Sentence-BERT and XGBoost.
-            Integrated API-based validation and Flask deployment.</p>
-            <br>
-            <a href="https://github.com/jayanth797">View Project →</a>
+            <h3>Online Recruitment Fraud Detection</h3>
+            <p>Developed ML-based scam detection system using BERT embeddings and traditional ML models.
+            Built Flask web app for real-time classification and reduced false positives.</p>
         </div>
 
         <div class="card">
-            <h3>Job Notification Tracker</h3>
-            <p>Designed system architecture for job alert SaaS platform.
-            Focused on structured planning, PRD documentation, and backend flow.</p>
-            <br>
-            <a href="https://github.com/jayanth797">View Project →</a>
+            <h3>AI Story Generator</h3>
+            <p>Designed adaptive storytelling system integrating LLM with custom BERT-based emotion classifier
+            to dynamically alter narrative flow.</p>
+        </div>
+
+        <div class="card">
+            <h3>Mynull – Mobile E-Commerce App</h3>
+            <p>Built Myntra-inspired mobile app using React Native & Expo.
+            Implemented reusable UI, navigation flow, and resolved Android build & deployment issues.</p>
         </div>
 
     </div>
 </section>
 
 <section>
-    <h2>Skills</h2>
+    <h2>Technical Skills</h2>
     <div class="skills">
         <span class="skill">Python</span>
-        <span class="skill">SQL</span>
-        <span class="skill">Machine Learning</span>
         <span class="skill">Flask</span>
-        <span class="skill">Pandas</span>
-        <span class="skill">Scikit-Learn</span>
+        <span class="skill">SQL</span>
+        <span class="skill">MySQL</span>
+        <span class="skill">MongoDB</span>
+        <span class="skill">BERT</span>
+        <span class="skill">Sentence-BERT</span>
+        <span class="skill">React Native</span>
+        <span class="skill">AWS (EC2, ECS)</span>
+        <span class="skill">Docker</span>
         <span class="skill">Git</span>
-        <span class="skill">Backend Development</span>
+        <span class="skill">Ubuntu</span>
     </div>
+</section>
+
+<section>
+    <h2>Education</h2>
+    <p><strong>Bachelor of Engineering (CSE)</strong><br>
+    Government Engineering College, Hassan<br>
+    CGPA: 8.1 | 2026</p>
 </section>
 
 <section>
     <h2>Contact</h2>
-    <p>Email: puttegowdajy@gmail.com</p>
+    <p>Email: jayanthpjayanthp055@gmail.com</p>
+    <p>Phone: +91 7483780480</p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/jayan6767/">linkedin.com/in/jayan6767</a></p>
 </section>
 
