--- a/index.html
+++ b/index.html
@@ -1,114 +1,271 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Jayanth P | Backend & ML Engineer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <style>
-        * { margin:0; padding:0; box-sizing:border-box; font-family:'Inter', sans-serif; }
-        body { background:#0d1117; color:#e6edf3; line-height:1.6; }
-        header { padding:100px 20px; text-align:center; }
-        header h1 { font-size:50px; font-weight:700; }
-        header p { margin-top:15px; font-size:20px; color:#8b949e; }
-        .btn { display:inline-block; margin:15px 10px; padding:12px 24px; background:#238636; color:white; text-decoration:none; border-radius:6px; font-weight:600; }
-        section { padding:70px 20px; max-width:1000px; margin:auto; }
-        h2 { font-size:32px; margin-bottom:30px; border-bottom:2px solid #30363d; padding-bottom:10px; }
-        .projects { display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:20px; }
-        .card { background:#161b22; padding:20px; border-radius:8px; transition:0.3s; }
-        .card:hover { transform:translateY(-5px); }
-        .card h3 { margin-bottom:10px; }
-        .card p { color:#8b949e; font-size:14px; }
-        .skills { display:flex; flex-wrap:wrap; gap:10px; }
-        .skill { background:#21262d; padding:8px 14px; border-radius:20px; font-size:14px; }
-        footer { text-align:center; padding:30px; color:#8b949e; }
-        a { color:#58a6ff; text-decoration:none; }
-    </style>
+<meta charset="UTF-8">
+<title>Jayanth P | ML & Backend Engineer</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+<style>
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
+    scroll-behavior: smooth;
+}
+
+body {
+    background: radial-gradient(circle at top left, #0f0f1a, #050510 70%);
+    color: #e6edf3;
+}
+
+/* Neon Glow Utility */
+.neon {
+    color: #00f5ff;
+    text-shadow: 0 0 5px #00f5ff,
+                 0 0 10px #00f5ff,
+                 0 0 20px #00f5ff;
+}
+
+/* Glass Card */
+.glass {
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 15px;
+    backdrop-filter: blur(15px);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    box-shadow: 0 0 25px rgba(0, 255, 255, 0.08);
+}
+
+/* Header */
+header {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+}
+
+header h1 {
+    font-size: 60px;
+    font-weight: 700;
+}
+
+.typing {
+    margin-top: 15px;
+    font-size: 22px;
+    height: 30px;
+    color: #ff00ff;
+    text-shadow: 0 0 10px #ff00ff;
+}
+
+.btn {
+    margin-top: 25px;
+    padding: 12px 30px;
+    background: transparent;
+    border: 1px solid #00f5ff;
+    color: #00f5ff;
+    border-radius: 8px;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+.btn:hover {
+    background: #00f5ff;
+    color: black;
+    box-shadow: 0 0 15px #00f5ff;
+}
+
+section {
+    padding: 80px 20px;
+    max-width: 1100px;
+    margin: auto;
+}
+
+h2 {
+    font-size: 34px;
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+.projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 30px;
+}
+
+.card {
+    padding: 25px;
+    transition: 0.4s;
+}
+
+.card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 0 20px rgba(0,255,255,0.2);
+}
+
+.card h3 {
+    margin-bottom: 10px;
+    color: #00f5ff;
+}
+
+.card p {
+    font-size: 14px;
+    color: #cbd5e1;
+}
+
+.project-links {
+    margin-top: 15px;
+}
+
+.project-links a {
+    font-size: 13px;
+    padding: 6px 12px;
+    border-radius: 20px;
+    border: 1px solid #ff00ff;
+    color: #ff00ff;
+    text-decoration: none;
+    margin-right: 10px;
+}
+
+.project-links a:hover {
+    background: #ff00ff;
+    color: black;
+    box-shadow: 0 0 10px #ff00ff;
+}
+
+.skills {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 12px;
+}
+
+.skill {
+    padding: 8px 16px;
+    border-radius: 20px;
+    border: 1px solid #00f5ff;
+    color: #00f5ff;
+}
+
+footer {
+    text-align: center;
+    padding: 40px;
+    color: #94a3b8;
+}
+</style>
 </head>
+
 <body>
 
 <header>
-    <h1>Jayanth P</h1>
-    <p>Backend & Machine Learning Engineer</p>
+    <h1 class="neon">Jayanth P</h1>
+    <div class="typing" id="typing"></div>
     <a href="https://github.com/jayanth797" class="btn">GitHub</a>
-    <a href="jayanthp.pdf" class="btn">Download Resume</a>
+    <a href="jayanthp.pdf" class="btn">Resume</a>
 </header>
 
 <section>
-    <h2>About</h2>
-    <p>
-        Computer Science undergraduate building full-stack and ML-driven applications.
-        I focus on turning real-world problems into scalable software using Python, Flask, and applied machine learning.
-        Strong interest in clean architecture, deployment workflows, and solving practical business problems.
-    </p>
+<h2 class="neon">About</h2>
+<div class="glass card">
+<p>
+Computer Science undergraduate building high-performance backend systems and ML-driven applications.
+Focused on scalable architecture, intelligent automation, and production-ready deployment.
+</p>
+</div>
 </section>
 
 <section>
-    <h2>Projects</h2>
-    <div class="projects">
+<h2 class="neon">Projects</h2>
+<div class="projects">
 
-        <div class="card">
-            <h3>Customer Churn Prediction</h3>
-            <p>Built ML system to predict customer churn using Logistic Regression and Random Forest.
-            Optimized recall (~80%) to prioritize retention-focused business decisions.</p>
-        </div>
+<div class="glass card">
+<h3>Customer Churn Prediction</h3>
+<p>ML pipeline optimized for recall (~80%) to identify high-risk customers using Logistic Regression & Random Forest.</p>
+<div class="project-links">
+<a href="https://github.com/jayanth797">GitHub</a>
+</div>
+</div>
 
-        <div class="card">
-            <h3>Online Recruitment Fraud Detection</h3>
-            <p>Developed ML-based scam detection system using BERT embeddings and traditional ML models.
-            Built Flask web app for real-time classification and reduced false positives.</p>
-        </div>
+<div class="glass card">
+<h3>Recruitment Fraud Detection</h3>
+<p>BERT-based NLP system deployed with Flask for real-time scam detection.</p>
+<div class="project-links">
+<a href="https://github.com/jayanth797">GitHub</a>
+</div>
+</div>
 
-        <div class="card">
-            <h3>AI Story Generator</h3>
-            <p>Designed adaptive storytelling system integrating LLM with custom BERT-based emotion classifier
-            to dynamically alter narrative flow.</p>
-        </div>
+<div class="glass card">
+<h3>AI Story Generator</h3>
+<p>Emotion-driven adaptive storytelling engine combining LLM + custom classifier.</p>
+<div class="project-links">
+<a href="https://github.com/jayanth797">GitHub</a>
+</div>
+</div>
 
-        <div class="card">
-            <h3>Mynull – Mobile E-Commerce App</h3>
-            <p>Built Myntra-inspired mobile app using React Native & Expo.
-            Implemented reusable UI, navigation flow, and resolved Android build & deployment issues.</p>
-        </div>
+<div class="glass card">
+<h3>Mynull Mobile App</h3>
+<p>Myntra-inspired e-commerce app built with React Native & Expo.</p>
+<div class="project-links">
+<a href="https://github.com/jayanth797">GitHub</a>
+</div>
+</div>
 
-    </div>
+</div>
 </section>
 
 <section>
-    <h2>Technical Skills</h2>
-    <div class="skills">
-        <span class="skill">Python</span>
-        <span class="skill">Flask</span>
-        <span class="skill">SQL</span>
-        <span class="skill">MySQL</span>
-        <span class="skill">MongoDB</span>
-        <span class="skill">BERT</span>
-        <span class="skill">Sentence-BERT</span>
-        <span class="skill">React Native</span>
-        <span class="skill">AWS (EC2, ECS)</span>
-        <span class="skill">Docker</span>
-        <span class="skill">Git</span>
-        <span class="skill">Ubuntu</span>
-    </div>
-</section>
-
-<section>
-    <h2>Education</h2>
-    <p><strong>Bachelor of Engineering (CSE)</strong><br>
-    Government Engineering College, Hassan<br>
-    CGPA: 8.1 | 2026</p>
-</section>
-
-<section>
-    <h2>Contact</h2>
-    <p>Email: jayanthpjayanthp055@gmail.com</p>
-    <p>Phone: +91 7483780480</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/jayan6767/">linkedin.com/in/jayan6767</a></p>
+<h2 class="neon">Skills</h2>
+<div class="skills">
+<span class="skill">Python</span>
+<span class="skill">Flask</span>
+<span class="skill">SQL</span>
+<span class="skill">MySQL</span>
+<span class="skill">MongoDB</span>
+<span class="skill">BERT</span>
+<span class="skill">AWS</span>
+<span class="skill">Docker</span>
+<span class="skill">Git</span>
+</div>
 </section>
 
 <footer>
-    © 2026 Jayanth P | Built with Focus & Discipline
+© 2026 Jayanth P | Neon Engineered
 </footer>
+
+<script>
+const text = [
+"Backend Engineer",
+"Machine Learning Developer",
+"Flask API Builder",
+"AI Systems Enthusiast"
+];
+
+let count = 0;
+let index = 0;
+let currentText = "";
+let letter = "";
+
+(function type(){
+    if(count === text.length){
+        count = 0;
+    }
+    currentText = text[count];
+    letter = currentText.slice(0, ++index);
+
+    document.getElementById("typing").textContent = letter;
+    if(letter.length === currentText.length){
+        count++;
+        index = 0;
+        setTimeout(type, 1200);
+    } else {
+        setTimeout(type, 70);
+    }
+})();
+</script>
 
 </body>
 </html>
