--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Jayanth P | ML & Backend Engineer</title>
+<title>Jayanth P | Machine Learning & Backend Engineer</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
@@ -17,30 +16,21 @@
 }
 
 body {
-    background: radial-gradient(circle at top left, #0f0f1a, #050510 70%);
-    color: #e6edf3;
+    background: linear-gradient(145deg, #0f172a, #111827);
+    color: #e5e7eb;
 }
 
-/* Neon Glow Utility */
-.neon {
-    color: #00f5ff;
-    text-shadow: 0 0 5px #00f5ff,
-                 0 0 10px #00f5ff,
-                 0 0 20px #00f5ff;
-}
-
-/* Glass Card */
+/* Glass effect */
 .glass {
-    background: rgba(255, 255, 255, 0.05);
-    border-radius: 15px;
-    backdrop-filter: blur(15px);
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    box-shadow: 0 0 25px rgba(0, 255, 255, 0.08);
+    background: rgba(255, 255, 255, 0.04);
+    backdrop-filter: blur(10px);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.06);
 }
 
 /* Header */
 header {
-    height: 100vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -50,33 +40,31 @@ header {
 }
 
 header h1 {
-    font-size: 60px;
+    font-size: 52px;
     font-weight: 700;
 }
 
 .typing {
-    margin-top: 15px;
-    font-size: 22px;
-    height: 30px;
-    color: #ff00ff;
-    text-shadow: 0 0 10px #ff00ff;
+    margin-top: 12px;
+    font-size: 20px;
+    color: #60a5fa;
+    height: 28px;
 }
 
 .btn {
-    margin-top: 25px;
-    padding: 12px 30px;
-    background: transparent;
-    border: 1px solid #00f5ff;
-    color: #00f5ff;
-    border-radius: 8px;
+    margin-top: 20px;
+    padding: 12px 26px;
+    border-radius: 6px;
     text-decoration: none;
+    font-weight: 500;
+    border: 1px solid #60a5fa;
+    color: #60a5fa;
     transition: 0.3s;
 }
 
 .btn:hover {
-    background: #00f5ff;
-    color: black;
-    box-shadow: 0 0 15px #00f5ff;
+    background: #60a5fa;
+    color: #0f172a;
 }
 
 section {
@@ -86,35 +74,35 @@ section {
 }
 
 h2 {
-    font-size: 34px;
-    margin-bottom: 40px;
+    font-size: 30px;
+    margin-bottom: 35px;
     text-align: center;
+    font-weight: 600;
 }
 
 .projects {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 30px;
+    gap: 25px;
 }
 
 .card {
     padding: 25px;
-    transition: 0.4s;
+    transition: 0.3s;
 }
 
 .card:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 0 20px rgba(0,255,255,0.2);
+    transform: translateY(-6px);
 }
 
 .card h3 {
     margin-bottom: 10px;
-    color: #00f5ff;
+    font-weight: 600;
 }
 
 .card p {
     font-size: 14px;
-    color: #cbd5e1;
+    color: #9ca3af;
 }
 
 .project-links {
@@ -125,16 +113,15 @@ h2 {
     font-size: 13px;
     padding: 6px 12px;
     border-radius: 20px;
-    border: 1px solid #ff00ff;
-    color: #ff00ff;
+    border: 1px solid #374151;
+    color: #d1d5db;
     text-decoration: none;
-    margin-right: 10px;
+    margin-right: 8px;
 }
 
 .project-links a:hover {
-    background: #ff00ff;
-    color: black;
-    box-shadow: 0 0 10px #ff00ff;
+    border-color: #60a5fa;
+    color: #60a5fa;
 }
 
 .skills {
@@ -147,14 +134,14 @@ h2 {
 .skill {
     padding: 8px 16px;
     border-radius: 20px;
-    border: 1px solid #00f5ff;
-    color: #00f5ff;
+    background: #1f2937;
+    font-size: 14px;
 }
 
 footer {
     text-align: center;
     padding: 40px;
-    color: #94a3b8;
+    color: #9ca3af;
 }
 </style>
 </head>
@@ -162,37 +149,37 @@ footer {
 <body>
 
 <header>
-    <h1 class="neon">Jayanth P</h1>
+    <h1>Jayanth P</h1>
     <div class="typing" id="typing"></div>
     <a href="https://github.com/jayanth797" class="btn">GitHub</a>
-    <a href="jayanthp.pdf" class="btn">Resume</a>
+    <a href="jayanthp.pdf" class="btn">Download Resume</a>
 </header>
 
 <section>
-<h2 class="neon">About</h2>
+<h2>About</h2>
 <div class="glass card">
-<p>
-Computer Science undergraduate building high-performance backend systems and ML-driven applications.
-Focused on scalable architecture, intelligent automation, and production-ready deployment.
+<p style="text-align:center; max-width:800px; margin:auto;">
+Computer Science undergraduate focused on building scalable backend systems and machine learning applications.
+I specialize in solving real-world problems using Python, Flask, and modern ML frameworks while maintaining clean architecture and deployment discipline.
 </p>
 </div>
 </section>
 
 <section>
-<h2 class="neon">Projects</h2>
+<h2>Projects</h2>
 <div class="projects">
 
 <div class="glass card">
 <h3>Customer Churn Prediction</h3>
-<p>ML pipeline optimized for recall (~80%) to identify high-risk customers using Logistic Regression & Random Forest.</p>
+<p>Built ML pipeline prioritizing recall (~80%) to predict high-risk customers using Logistic Regression and Random Forest.</p>
 <div class="project-links">
 <a href="https://github.com/jayanth797">GitHub</a>
 </div>
 </div>
 
 <div class="glass card">
-<h3>Recruitment Fraud Detection</h3>
-<p>BERT-based NLP system deployed with Flask for real-time scam detection.</p>
+<h3>Online Recruitment Fraud Detection</h3>
+<p>Developed BERT-based NLP classification system deployed with Flask for real-time fraud detection.</p>
 <div class="project-links">
 <a href="https://github.com/jayanth797">GitHub</a>
 </div>
@@ -200,7 +187,7 @@ Focused on scalable architecture, intelligent automation, and production-ready d
 
 <div class="glass card">
 <h3>AI Story Generator</h3>
-<p>Emotion-driven adaptive storytelling engine combining LLM + custom classifier.</p>
+<p>Emotion-driven adaptive storytelling engine integrating LLM with custom classification model.</p>
 <div class="project-links">
 <a href="https://github.com/jayanth797">GitHub</a>
 </div>
@@ -208,7 +195,7 @@ Focused on scalable architecture, intelligent automation, and production-ready d
 
 <div class="glass card">
 <h3>Mynull Mobile App</h3>
-<p>Myntra-inspired e-commerce app built with React Native & Expo.</p>
+<p>Cross-platform e-commerce mobile application built using React Native and Expo.</p>
 <div class="project-links">
 <a href="https://github.com/jayanth797">GitHub</a>
 </div>
@@ -218,7 +205,7 @@ Focused on scalable architecture, intelligent automation, and production-ready d
 </section>
 
 <section>
-<h2 class="neon">Skills</h2>
+<h2>Technical Skills</h2>
 <div class="skills">
 <span class="skill">Python</span>
 <span class="skill">Flask</span>
@@ -232,16 +219,24 @@ Focused on scalable architecture, intelligent automation, and production-ready d
 </div>
 </section>
 
+<section>
+<h2>Contact</h2>
+<p style="text-align:center;">
+Email: jayanthpjayanthp055@gmail.com <br>
+LinkedIn: <a href="https://www.linkedin.com/in/jayan6767/" style="color:#60a5fa;">linkedin.com/in/jayan6767</a>
+</p>
+</section>
+
 <footer>
-© 2026 Jayanth P | Neon Engineered
+© 2026 Jayanth P | Professional Portfolio
 </footer>
 
 <script>
 const text = [
-"Backend Engineer",
-"Machine Learning Developer",
+"Machine Learning Engineer",
+"Backend Developer",
 "Flask API Builder",
-"AI Systems Enthusiast"
+"Data-Driven Problem Solver"
 ];
 
 let count = 0;
