--- a/index.html
+++ b/index.html
@@ -16,19 +16,17 @@
 }
 
 body{
-    background:linear-gradient(135deg,#f3f4f6,#e5e7eb);
+    background:linear-gradient(135deg,#f8fafc,#e5e7eb);
     color:#111827;
-    overflow-x:hidden;
 }
 
-/* HERO SECTION */
+/* HERO */
 .hero{
     display:flex;
     align-items:center;
     justify-content:space-between;
     padding:100px 10%;
     min-height:100vh;
-    animation: fadeIn 1.2s ease-in;
 }
 
 .hero-left{
@@ -63,10 +61,9 @@ body{
     text-decoration:none;
     font-weight:500;
     transition:0.3s ease;
-    display:inline-block;
 }
 
-/* GitHub Button */
+/* GitHub */
 .btn-primary{
     background:#6366f1;
     color:white;
@@ -76,7 +73,7 @@ body{
     background:#4f46e5;
 }
 
-/* LinkedIn Button */
+/* LinkedIn */
 .btn-outline{
     border:2px solid #6366f1;
     color:#6366f1;
@@ -91,29 +88,23 @@ body{
 .hero-right{
     padding:35px;
     border-radius:35px;
-    background:linear-gradient(135deg,#ede9fe,#f5f3ff);
-    box-shadow:0 30px 90px rgba(99,102,241,0.18);
+    background:white;
+    border:4px solid #6366f1;   /* NICE BORDER */
+    box-shadow:0 35px 90px rgba(99,102,241,0.18);
 }
 
 .hero-right img{
-    width:560px;   /* BIGGER IMAGE */
-    border-radius:30px;
-    box-shadow:0 30px 70px rgba(0,0,0,0.18);
+    width:560px;
+    border-radius:25px;
     display:block;
     animation: floatImage 5.5s ease-in-out infinite;
 }
 
-/* FLOAT ANIMATION */
+/* FLOAT */
 @keyframes floatImage{
     0%{ transform: translateY(0px); }
     50%{ transform: translateY(-22px); }
     100%{ transform: translateY(0px); }
-}
-
-/* FADE IN */
-@keyframes fadeIn{
-    from{ opacity:0; transform: translateY(20px); }
-    to{ opacity:1; transform: translateY(0); }
 }
 
 /* RESPONSIVE */
