--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@ body{
     font-size:18px;
 }
 
-/* BUTTONS */
 .buttons{
     display:flex;
     gap:15px;
@@ -84,7 +83,7 @@ body{
     color:white;
 }
 
-/* Resume Button */
+/* Resume */
 .btn-resume{
     background:#111827;
     color:white;
@@ -94,7 +93,6 @@ body{
     background:#000000;
 }
 
-/* IMAGE CARD */
 .hero-right{
     padding:35px;
     border-radius:35px;
@@ -145,15 +143,14 @@ body{
         <h1>Hello, I’m <span>Jayanth P</span></h1>
 
         <p>
-            Machine Learning & Backend Engineer specializing in designing scalable, 
-            high-performance systems and intelligent applications built with Python 
-            and modern AI frameworks.
+            Machine Learning & Backend Engineer specializing in designing scalable,
+            high-performance systems and intelligent AI-powered applications.
         </p>
 
         <div class="buttons">
             <a href="https://github.com/jayanth797" target="_blank" class="btn btn-primary">GitHub</a>
             <a href="https://www.linkedin.com/in/jayan6767/" target="_blank" class="btn btn-outline">LinkedIn</a>
-            <a href="jayanthp.pdf" download class="btn btn-resume">Download Resume</a>
+            <a href="jayanthp.pdf" target="_blank" class="btn btn-resume">Download Resume</a>
         </div>
     </div>
 
